--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ form.customDatabaseConfigForm.customDatabaseAdded table.form-table, form.customD
     transition: 0.25s ease all;
 }
 
-.wrap.databaseExplorer .tableNamesList .table_name:hover {
+.wrap.databaseExplorer .tableNamesList .table_name:hover, .table_name.current_open_table {
     background: #006799;
     color: white;
     border-left: 3px solid #0085ba;
@@ -73,12 +73,16 @@ form.customDatabaseConfigForm.customDatabaseAdded table.form-table, form.customD
     background: #636363;
     width: fit-content;
 }
-
+.tableValues {
+    height: calc(100% - 30px);
+    overflow: auto;
+}
 .tableContent {
     max-width: 80%;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
     background: #d6d6d6;
+    position: relative;
 }
 
 .tableSingleColumn {
@@ -119,3 +123,68 @@ form.customDatabaseConfigForm.customDatabaseAdded table.form-table, form.customD
     color: black;
 }
 /* END DATABASE EXPLORER */
+
+
+/****LOADING SCREEN*****/
+
+
+.loading_custom_tables {
+    position: absolute;
+    left: calc(50% - 160px);
+    top: calc(50% - 160px);
+    padding: 50px;
+    overflow: hidden;
+    width: 220px;
+    height: 220px;
+}
+
+.circle {
+    border: 10px dashed white;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    animation-name: exampleColor;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    box-shadow: 0 0 50px inset;
+    animation-name: example;
+    animation-duration: 14s;
+    animation-iteration-count: alternate;
+  }
+  
+  
+  .innerCircle {
+    position: relative;
+    top: 10px;
+    left: 10px;
+    border-top: 10px solid white;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid white;
+    border-radius: 50%;
+    width: 160px;
+    height: 160px;
+    box-shadow: 0 0 50px white;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes example {
+    0%   {transform: rotate(90deg);}
+    25%  {transform: rotate(180deg);}
+    50%  {transform: rotate(270deg);}
+    75%  {transform: rotate(360deg);}
+    100% {transform: rotate(450deg);}
+  }
+  
+  @keyframes exampleColor {
+    0%   {box-shadow: 0px 0px 40px rgba(50,50,50,0.95);}
+    33%  {box-shadow: 0px 0px 60px  rgba(50,50,50,0.95);}
+    33%  {box-shadow: 0px 0px 40px  rgba(50,50,50,0.95);}
+    100% {box-shadow: 0px 0px 60px  rgba(50,50,50,0.95);}
+  }
+
+  
+
+  /*****END LOADING ******/
